# DiscFit

./: README.md
source/: CHANGELOG.md  features.md
source/tauri-app/: package-lock.json  package.json
source/tauri-app/src/: App.tsx  index.css  main.tsx  tauriClient.ts  types.ts
source/tauri-app/src-tauri/: 2  Cargo.toml  check.json  error.txt  output.txt  tauri.conf.json
source/tauri-app/src-tauri/capabilities/: default.json
source/tauri-app/src-tauri/src/: main.rs  models.rs  test.rs
source/tauri-app/src-tauri/src/commands/: binpacking.rs  exporters.rs  fs_ops.rs  mkisofs.rs  mod.rs  plugins.rs  settings.rs  tasks.rs
source/tauri-app/src/components/: BinsViewer.tsx  ContextMenu.tsx  ErrorBoundary.tsx  FileList.tsx  MediaControls.tsx  NativeIcon.tsx  Titlebar.tsx
