[package]
name = "tauri-app"
version = "0.1.0"
description = "DiscFit - Disc Fitting Utility"
authors = ["David Strencsev"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-log = "2.0.0-rc.0"
file_icon_provider = "1.0.0"
base64 = "0.22.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
